--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.3.6",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "typescript": "^5.0.4",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.21.4"
   },
